--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
